--- a/src/sass/components/_skills.scss
+++ b/src/sass/components/_skills.scss
@@ -60,7 +60,7 @@
   }
 
   div[class^="tag"] {
-    width: 140px;
+    width: 180px;
     height: 50px;
     display: flex;
     align-items: center;
